--- a/Alchemy Tours/bin/AndroidManifest.xml
+++ b/Alchemy Tours/bin/AndroidManifest.xml
@@ -170,6 +170,16 @@
             </intent-filter>
         </activity>
         
+                <activity
+            android:name="ie.alchemytours.alchemytours.StatueDisplay"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="ie.alchemytours.alchemytours.StatueDisplay" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        
             
              <activity
             android:name="ie.alchemytours.alchemytours.Statues"
